--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -97,12 +97,11 @@
     <!--- ------------------------------------------------------------------ -->
 
     <script src="/app/TatamiApp.js"></script>
+    <script src="/app/shared/topMenu/TopMenuModule.js"></script>
     <script src="/app/components/login/LoginModule.js"></script>
     <script src="/app/components/about/AboutModule.js"></script>
     <script src="/app/components/home/HomeModule.js"></script>
     <script src="/app/components/account/AccountModule.js"></script>
-
-    <script src="/app/components/account/FormController.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     <!-- About Section -->
@@ -139,9 +138,9 @@
     <script src="/app/shared/lists/user/UserListController.js"></script>
 
     <!-- Post New Status Modal -->
-    <script src="/app/components/home/post/PostModule.js"></script>
-    <script src="/app/components/home/post/StatusManagerController.js"></script>
-    <script src="/app/components/home/post/StatusCreateController.js"></script>
+    <script src="/app/shared/topMenu/post/PostModule.js"></script>
+    <script src="/app/shared/topMenu/post/StatusManagerController.js"></script>
+    <script src="/app/shared/topMenu/post/StatusCreateController.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
 
@@ -151,6 +150,9 @@
     
     <!-- Account Module -->
     <script src="/app/components/account/AccountController.js"></script>
+
+    <!-- Form Subview (for views with tabs) -->
+    <script src="/app/components/account/FormController.js"></script>
 
     <!-- Profile View -->
     <script src="/app/components/account/profile/ProfileModule.js"></script>
