Starting Popular Users account page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -193,6 +193,8 @@
     <script src="/app/components/account/tags/TagsController.js"></script>
 
     <!-- Statuses of the Day View -->
+    <script src="/app/components/account/sotd/DailyStatusModule.js"></script>
+    <script src="/app/components/account/sotd/DailyStatusController.js"></script>
 
 
     <!--- ------------------------------------------------------------------ -->
@@ -219,6 +221,7 @@
     <script src="/app/shared/services/TagService.js"></script>
     <script src="/app/shared/services/GeolocService.js"></script>
     <script src="/app/shared/services/SearchService.js"></script>
+    <script src="/app/shared/services/DailyStatusService.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     
