Fixed issue with images displaying incorrectly

--- a/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
@@ -69,7 +69,7 @@
                     </span>
                     <a ui-sref="home.profile.statuses({ username: suggestion.username })">
                         <span class='pull-left background-image-fffix'>
-                            <div class="img img-rounded img-small" ng-style="{ 'background-image': 'url(' + suggestion.avatarURL + ')' }"></div>
+                            <img class="img-rounded img-small" ng-style="{ 'background-image': 'url(' + suggestion.avatarURL + ')' }">
                         </span>
                     </a>&nbsp;
                     <a ui-sref="home.profile.statuses({ username: suggestion.username })">
