Started Admin page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -108,6 +108,7 @@
     <script src="/app/components/about/AboutModule.js"></script>
     <script src="/app/components/home/HomeModule.js"></script>
     <script src="/app/components/account/AccountModule.js"></script>
+    <script src="/app/components/admin/AdminModule.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     <!-- About Section -->
@@ -149,6 +150,11 @@
     <script src="/app/shared/topMenu/post/StatusCreateController.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
+
+    <!--- ------------------------------------------------------------------ -->
+    <!-- Admin Section -->
+    <!--- ------------------------------------------------------------------ -->
+    <script src="/app/components/admin/AdminController.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     <!-- Account Section -->
