Admin page mostly completed

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -155,6 +155,7 @@
     <!-- Admin Section -->
     <!--- ------------------------------------------------------------------ -->
     <script src="/app/components/admin/AdminController.js"></script>
+    <script src="/app/components/admin/AdminService.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     <!-- Account Section -->
