--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -202,6 +202,7 @@
     <!-- Statuses of the Day View -->
     <script src="/app/components/account/sotd/DailyStatusModule.js"></script>
     <script src="/app/components/account/sotd/DailyStatusController.js"></script>
+    <script src="/app/components/account/sotd/DailyStatusData.js"></script>
 
 
     <!--- ------------------------------------------------------------------ -->
