Added root state tatami, and configured account page to use this root state

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -130,45 +130,45 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a ui-sref="account.profile">
+                                <a ui-sref="tatami.account.profile">
                                     <span class="glyphicon glyphicon-user"></span>
                                     <span translate="tatami.account.profile.title"></span>
                                 </a>
                             </li>
                             <li>
-                                <a ui-sref="account.preferences">
+                                <a ui-sref="tatami.account.preferences">
                                     <span class="glyphicon glyphicon-cog"></span>
                                     <span translate="tatami.account.preferences.title"></span>
                                 </a>
                             </li>
                             <li>
-                                <a ui-sref="account.password">
+                                <a ui-sref="tatami.account.password">
                                     <span class="glyphicon glyphicon-lock"></span>
                                     <span translate="tatami.account.password.title"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a ui-sref="account.files"
+                                <a ui-sref="tatami.account.files"
                                     <span class="glyphicon glyphicon-file"></span>
                                     <span translate="tatami.account.files.title"></span>
                                 </a>
-                                <a ui-sref="account.users">
+                                <a ui-sref="tatami.account.users">
                                     <span class="glyphicon glyphicon-globe"></span>
                                     <span translate="tatami.account.users.title"></span>
                                 </a>
-                                <a ui-sref="account.groups">
+                                <a ui-sref="tatami.account.groups">
                                     <span class="glyphicon glyphicon-th-large"></span>
                                     <span translate="tatami.account.groups.title"></span>
                                 </a>
-                                <a ui-sref="account.tags">
+                                <a ui-sref="tatami.account.tags">
                                     <span class="glyphicon glyphicon-tags"></span>
                                     <span translate="tatami.account.tags.title"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a ui-sref="account.sotd">
+                                <a ui-sref="tatami.account.sotd">
                                     <span class="glyphicon glyphicon-signal"></span>
                                     <span translate="tatami.account.sotd.title"></span>
                                 </a>
