--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -109,7 +109,7 @@
             <!--<c:if test="${currentPage != null && currentPage == 'home'}">-->
             <!--<sec:authorize ifAnyGranted="ROLE_USER">-->
 
-            <ul ng-if="$state.includes('account')" class="nav pull-right">
+            <ul ng-if="$state.includes('tatami.account')" class="nav pull-right">
                 <li>
                     <a href="/tatami/logout">
                         <span class="glyphicon glyphicon-off"></span>
