--- a/src/main/webapp/app/shared/lists/status/StatusListView.html
+++ b/src/main/webapp/app/shared/lists/status/StatusListView.html
@@ -7,7 +7,7 @@
                 </div>
                 <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false" ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe, 'both': status.favorite && status.shareByMe }">
                     <div class="pull-left background-image-fffix statusitem-img">
-                        <a ui-sref="home.profile.statuses({ username: status.username })">
+                        <a ui-sref="tatami.home.profile.statuses({ username: status.username })">
                             <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                         </a>
                     </div>
@@ -16,7 +16,7 @@
                             <!-- Possible backend bug where SHARE type statuses have shareByMe=true and sharedByUsername == profile.username -->
                             <small ng-if="status.type == 'SHARE'">
                                 <span class="glyphicon glyphicon-retweet">&nbsp;</span>
-                                <a ui-sref="home.profile.statuses({ username: status.username })">
+                                <a ui-sref="tatami.home.profile.statuses({ username: status.username })">
                                     <span class="text-muted">@{{ status.sharedByUsername }}</span>
                                 </a>
                                 <span translate="tatami.home.status.shared"></span>
@@ -24,7 +24,7 @@
                             </small>
                             <span ng-if="status.type == 'MENTION_SHARE'" class="glyphicon glyphicon-retweet">&nbsp;</span>
                             <span ng-if="status.type == 'MENTION_FRIEND'" class="glyphicon glyphicon-user">&nbsp;</span>
-                            <a ui-sref="home.profile.statuses({ username: status.username })">
+                            <a ui-sref="tatami.home.profile.statuses({ username: status.username })">
                                 <strong>{{ status.firstName + ' ' + status.lastName }}</strong>
                                 <small>@{{ status.username }}</small>
                             </a>
@@ -32,7 +32,7 @@
                             <span ng-if="status.type == 'MENTION_FRIEND'" translate="tatami.home.status.followed"></span>
                             <small> · </small>
                             <!-- Replace hover title with hover bubble -->
-                            <a ui-sref="home.status({ status: status.statusId })">
+                            <a ui-sref="tatami.home.status({ status: status.statusId })">
                                 <small ng-if="!isOneDayOrMore(status.statusDate)" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}" am-time-ago="status.statusDate"></small>
                                 <small ng-if="isOneDayOrMore(status.statusDate)" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}">{{ status.statusDate | amDateFormat:'MMM D'}}</small>
                             </a>
@@ -42,7 +42,7 @@
                         <div class="markdown" ng-class="{ 'mention-share': status.type == 'MENTION_SHARE' }" ng-bind-html="status.content | emoticon | markdown"></div>
 
                         <small ng-if="status.groupId">
-                            <a class="label" ng-class="{ 'label-info': !status.publicGroup, 'label-warning': status.publicGroup }" ui-sref="home.home.group.statuses({ groupId: status.groupId })">
+                            <a class="label" ng-class="{ 'label-info': !status.publicGroup, 'label-warning': status.publicGroup }" ui-sref="tatami.home.home.group.statuses({ groupId: status.groupId })">
                             {{ status.groupName }}
                             </a>
                             <br>
@@ -57,7 +57,7 @@
                         <small ng-if="status.replyTo">
                             <span class="glyphicon glyphicon-share-alt"></span>
                             <span translate="tatami.home.status.replyTo"></span>
-                            <a ui-sref="home.status({ status: status.replyTo })">@{{ status.replyToUsername }}</a>
+                            <a ui-sref="tatami.home.status({ status: status.replyTo })">@{{ status.replyToUsername }}</a>
                             <br>
                         </small>
 
