--- a/src/main/webapp/app/shared/lists/user/UserListView.html
+++ b/src/main/webapp/app/shared/lists/user/UserListView.html
@@ -2,7 +2,7 @@
     <section class="timeline">
         <div class="useritem" ng-repeat="user in users">
             <div class='pull-left background-image-fffix'>
-                <a ui-sref="home.profile.statuses({ username: user.username })">
+                <a ui-sref="tatami.home.profile.statuses({ username: user.username })">
                     <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + user.avatarURL + ')' }"></div>
                 </a>
             </div>
@@ -11,13 +11,13 @@
                     <span class="glyphicon" ng-class="user.friend ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
                 </span>
                 
-                <a ui-sref="home.profile.statuses({ username: user.username })">
+                <a ui-sref="tatami.home.profile.statuses({ username: user.username })">
                     <strong>
                         {{ user.firstName + ' ' + user.lastName }}
                     </strong>
                 </a>
 
-                <a ui-sref="home.profile.statuses({ username: user.username })">
+                <a ui-sref="tatami.home.profile.statuses({ username: user.username })">
                     <small>
                         @{{ user.username }}
                     </small>
