--- a/src/main/webapp/app/shared/sidebars/profile/ProfileSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/profile/ProfileSidebarView.html
@@ -7,12 +7,12 @@
         </div>
         <div class="well well-sm little-padding">
             <div>
-                <a class="h3" ui-sref="home.profile.statuses({ username: user.username })">
+                <a class="h3" ui-sref="tatami.home.profile.statuses({ username: user.username })">
                     <strong>{{ user.firstName + ' ' + user.lastName }}</strong>
                 </a>
             </div>
             <div>                
-                <a class="h5 text-muted" ui-sref="home.profile.statuses({ username: user.username })">
+                <a class="h5 text-muted" ui-sref="tatami.home.profile.statuses({ username: user.username })">
                     @{{ user.username }}
                 </a>
             </div>
@@ -58,7 +58,7 @@
                         <span class="glyphicon" ng-class="tag.followed ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
                     </span>
                     <span class="glyphicon" ng-class="tag.trendingUp ? 'glyphicon-arrow-up' : 'glyphicon-arrow-down'"></span>
-                    <a ui-sref="home.home.tag({ tag: tag.name })">#{{ tag.name }}</a>
+                    <a ui-sref="tatami.home.home.tag({ tag: tag.name })">#{{ tag.name }}</a>
                 </div>
             </div>
         </div>
