First implementation of authorizing users

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -208,6 +208,12 @@
     <!--- ------------------------------------------------------------------ -->
 
     <!--- ------------------------------------------------------------------ -->
+    <!-- Login Section -->
+    <!--- ------------------------------------------------------------------ -->
+    <script src="/app/components/login/LoginModule.js"></script>
+    <script src="/app/components/login/ManualLoginController.js"></script>
+
+    <!--- ------------------------------------------------------------------ -->
     <!-- Shared Files Section -->
     <!--- ------------------------------------------------------------------ -->
 
@@ -230,6 +236,7 @@
     <script src="/app/shared/services/GeolocService.js"></script>
     <script src="/app/shared/services/SearchService.js"></script>
     <script src="/app/shared/services/DailyStatusService.js"></script>
+    <script src="/app/shared/services/UserSession.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     
