--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -237,6 +237,7 @@
     <script src="/app/shared/services/SearchService.js"></script>
     <script src="/app/shared/services/DailyStatusService.js"></script>
     <script src="/app/shared/services/UserSession.js"></script>
+    <script src="/app/shared/services/AuthenticationService.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     
