Handle authorization between page refreshes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -239,6 +239,9 @@
     <script src="/app/shared/services/UserSession.js"></script>
     <script src="/app/shared/services/AuthenticationService.js"></script>
 
+    <!-- TopMenu -->
+    <script src="/app/shared/topMenu/TopMenuController.js"></script>
+
     <!--- ------------------------------------------------------------------ -->
     
     <!-- End Footer -->
