--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -1,5 +1,5 @@
 <!--<c:if test="${ios == null || !ios}">-->
-    <div id="navbar" class="navbar noRadius">
+    <div ng-controller="TopMenuController" id="navbar" class="navbar noRadius">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-responsive-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -111,7 +111,7 @@
 
             <ul ng-if="$state.includes('tatami.account')" class="nav pull-right">
                 <li>
-                    <a href="/tatami/logout">
+                    <a id="logout" ng-click="logout()">
                         <span class="glyphicon glyphicon-off"></span>
                         <span translate="tatami.home.menu.account.logout"></span>
                     </a>
@@ -172,14 +172,14 @@
                                     <span class="glyphicon glyphicon-signal"></span>
                                     <span translate="tatami.account.sotd.title"></span>
                                 </a>
-                                <a ui-sref="home.home.company">
+                                <a ui-sref="tatami.home.home.company">
                                     <span class="glyphicon glyphicon-briefcase"></span>
                                     <span translate="tatami.home.menu.account.companyTimeline"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="/tatami/logout">
+                                <a ng-click="logout()">
                                     <span class="glyphicon glyphicon-off"></span>
                                     <span translate="tatami.home.menu.account.logout"></span>
                                 </a>
