--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -168,11 +168,11 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a ui-sref="tatami.account.sotd">
+                                <a ui-sref="tatami.account.topPosters">
                                     <span class="glyphicon glyphicon-signal"></span>
-                                    <span translate="tatami.account.sotd.title"></span>
+                                    <span translate="tatami.account.topPosters.title"></span>
                                 </a>
-                                <a ui-sref="home.home.company">
+                                <a ui-sref="tatami.home.home.company">
                                     <span class="glyphicon glyphicon-briefcase"></span>
                                     <span translate="tatami.home.menu.account.companyTimeline"></span>
                                 </a>
