--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
         </button>
         <!-- Change href to ui-sref that goes to 'home' which redirects to either login or /home/timeline -->
-        <a class="navbar-brand" href="#/">
+        <a class="navbar-brand" ui-sref="tatami.home.home.timeline">
             <img title="{{ 'tatami.home.menu.logo' | translate }}" src="/assets/img/company-logo.png">
             <span translate="tatami.home.menu.title"></span>
         </a>
