Installed angular-local-storage

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -98,6 +98,8 @@
 
     <script src="/assets/bower_components/openlayers/lib/OpenLayers.js"></script>
 
+    <script src="/assets/bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+
     <!--- ------------------------------------------------------------------ -->
 
     <!--- ------------------------------------------------------------------ -->
