Restructured login page so that registering has its own view. Authorization needs some improvement, but it is correctly forcing the user to be logged in to access the site. It handles redirection to login page, and then back to previously accessed state.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -216,6 +216,9 @@
     <!--- ------------------------------------------------------------------ -->
     <script src="/app/components/login/LoginModule.js"></script>
     <script src="/app/components/login/manual/ManualLoginController.js"></script>
+    <script src="/app/components/login/recoverPassword/RecoverPasswordController.js"></script>
+    <script src="/app/components/login/register/RegisterController.js"></script>
+    <script src="/app/components/login/google/GoogleLoginController.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     <!-- Shared Files Section -->
