--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -216,8 +216,14 @@
     <!--- ------------------------------------------------------------------ -->
     <script src="/app/components/login/LoginModule.js"></script>
     <script src="/app/components/login/manual/ManualLoginController.js"></script>
+
+    <!-- Password Recovery -->
     <script src="/app/components/login/recoverPassword/RecoverPasswordController.js"></script>
+    <script src="/app/components/login/recoverPassword/RecoverPasswordService.js"></script>
+
+    <!-- Register Service -->
     <script src="/app/components/login/register/RegisterController.js"></script>
+    <script src="/app/components/login/register/RegisterService.js"></script>
     <script src="/app/components/login/google/GoogleLoginController.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
