--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -219,12 +219,18 @@
 
     <!-- Password Recovery -->
     <script src="/app/components/login/recoverPassword/RecoverPasswordController.js"></script>
-    <script src="/app/components/login/recoverPassword/RecoverPasswordService.js"></script>
 
-    <!-- Register Service -->
+    <!-- Register -->
     <script src="/app/components/login/register/RegisterController.js"></script>
-    <script src="/app/components/login/register/RegisterService.js"></script>
+
+    <!-- Google Login -->
     <script src="/app/components/login/google/GoogleLoginController.js"></script>
+
+    <!-- Email -->
+    <script src="/app/components/login/email/EmailRegistrationController.js"></script>
+
+    <!-- Login Services -->
+    <script src="/app/components/login/RegistrationService.js"></script>
 
     <!--- ------------------------------------------------------------------ -->
     <!-- Shared Files Section -->
