--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -1,5 +1,5 @@
 <!--<c:if test="${ios == null || !ios}">-->
-    <div ng-controller="TopMenuController" id="navbar" class="navbar noRadius">
+    <div id="navbar" class="navbar noRadius">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-responsive-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -118,7 +118,7 @@
                 </li>
             </ul>
 
-            <div ng-if="showSearchAccountPost">
+            <div ng-if="$state.includes('tatami.home')">
                 <ul class="nav pull-right">
                     <li class="dropdown pointer">
                         <a class="dropdown-toggle" data-toggle="dropdown">
