Bootstrap welcome modal now works. Starting help tour

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -195,7 +195,7 @@
                 </ul>
                 <ul class="nav pull-right">
                     <li>
-                        <a href="#" id="help-tour">
+                        <a href="#" popover-placement="bottom" popover="On the Bottom!" id="help-tour">
                             <span>
                                 <span class="glyphicon glyphicon-question-sign"></span>
                                 <span translate="tatami.home.menu.help" class="hidden-tablet"></span>
