Updated bootstrap-ui and added popovers to the tour areas. Tour is not done yet though.

--- a/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
@@ -19,7 +19,7 @@
         </div>
     </section>
     <section class="hidden-phone groups">
-        <div class="panel panel-default">
+        <div class="panel panel-default" popover="Groups" popover-placement="right" popover-trigger="mouseenter">
             <div class="panel-heading">
                 <span class="glyphicon glyphicon-th-large"></span>
                 <span translate="tatami.home.sidebar.myGroups"></span>
@@ -40,7 +40,7 @@
         </div>
     </section>
     <section class="hidden-phone tag-trends">
-        <div class="panel panel-default">
+        <div class="panel panel-default" popover="Tags" popover-placement="right" popover-trigger="mouseenter">
             <div class="panel-heading">
                 <span class="glyphicon glyphicon-fire"></span>
                 <span translate="tatami.home.sidebar.trends"></span>
@@ -57,7 +57,7 @@
         </div>
     </section>
     <section class="hidden-phone who-to-follow">
-        <div class="panel panel-default">
+        <div class="panel panel-default" popover="Who to Follow" popover-placement="right" popover-trigger="mouseenter">
             <div class="panel-heading">
                 <span class="glyphicon glyphicon-user"></span>
                 <span translate="tatami.home.sidebar.whoToFollow"></span>
