Changed the post modal to be a state, this fixed a bug with the welcome modal

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -186,8 +186,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="hidden-phone" ng-controller="StatusManagerController">
-                        <button popover-placement="bottom" popover="Post Button" popover-trigger="mouseenter" class="btn btn-primary navbar-form" ng-click="showModal()">
+                    <li class="hidden-phone">
+                        <button popover-placement="bottom" popover="Post Button" popover-trigger="mouseenter" class="btn btn-primary navbar-form" ui-sref="tatami.home.home.timeline.post({'statusId':null})">
                             <i class="glyphicon glyphicon-pencil"></i>
                             <span translate="tatami.home.post.button" class="visible-desktop"></span>
                         </button>
