Removed unnecessary params in ui-sref

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -187,7 +187,7 @@
                         </ul>
                     </li>
                     <li class="hidden-phone">
-                        <button popover-placement="bottom" popover="Post Button" popover-trigger="mouseenter" class="btn btn-primary navbar-form" ui-sref="tatami.home.home.timeline.post({'statusId':null})">
+                        <button popover-placement="bottom" popover="Post Button" popover-trigger="mouseenter" class="btn btn-primary navbar-form" ui-sref="tatami.home.home.timeline.post">
                             <i class="glyphicon glyphicon-pencil"></i>
                             <span translate="tatami.home.post.button" class="visible-desktop"></span>
                         </button>
