--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -30,8 +30,8 @@
                     </span>
                     </a>
                 </li>
-                <li class="dropdown pointer">
-                    <a class="dropdown-toggle" data-toggle="dropdown">
+                <li class="dropdown pointer" dropdown>
+                    <a class="dropdown-toggle" data-toggle="dropdown" dropdown-toggle>
                     <span>
                         <span class="glyphicon glyphicon-info-sign"></span>
                         <span translate="tatami.home.menu.about.title" class="hidden-tablet"></span>
