Search results are now displayed in search results, but not in a visually appealing way

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -101,6 +101,8 @@
 
     <script src="/assets/bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
 
+    <script src="/assets/bower_components/nsPopover/src/nsPopover.js"></script>
+
     <!--- ------------------------------------------------------------------ -->
 
     <!--- ------------------------------------------------------------------ -->
