Search bar now redirects to the proper page if a search result is clicked. Still not aesthetically pleasing

--- a/src/main/webapp/app/shared/topMenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topMenu/TopMenuView.html
@@ -204,7 +204,7 @@
                     </li>
                 </ul>
                 <form id="searchform" class="navbar-form pull-right col-span-4" action="">
-                    <input name="search" ng-model="asyncSelected" typeahead="val.name for val in getResults($viewValue)" typeahead-template-url="/app/shared/topMenu/SearchView.html" type="text" class="col-span-12" id="searchinput" autocomplete="off" placeholder="{{ 'tatami.home.menu.search' | translate }}">
+                    <input name="search" ng-model="asyncSelected" typeahead="val.name for val in getResults($viewValue)" typeahead-on-select="goToPage($item, $model, $label)" typeahead-template-url="/app/shared/topMenu/SearchView.html" type="text" class="col-span-12" id="searchinput" autocomplete="off" placeholder="{{ 'tatami.home.menu.search' | translate }}">
                     
                     <!-- Clear search field when clicking the x icon ? -->
                     <!-- Probably should just remove it -->
